more style improvements

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css" />
-  <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="stylesheet" href="assets/css/main.css"  />
   
     
 </head>
@@ -23,19 +23,17 @@
 
 
   <!-- Header -->
-  <header class="masthead d-flex">
+  <div class="masthead d-flex">
     <div class="container text-right bottom-right-corner">
-      <h1 class="mb-1">Welcome to the Bay Area Hub of the Sunrise Movement</h1>
+      <h1>Welcome to the Bay Area Hub of the Sunrise Movement</h1>
    <!--   <a class="btn btn-primary js-scroll-trigger" href="#about">Find Out More</a> -->
     </div>
     <div class="overlay"></div>
-  </header>
+  </div>
 
 
   <!-- Who We Are -->
-  <section class="content-section bg-dark py-5" id="who-we-are">
-    <div class="container text-justify">
-      <div class="row">
+    <div class="container text-justify" id="who-we-are">
         <div class="col-lg-6 col-md-10 mx-auto">
           <h2 class="text-center">Who We Are</h2>
           <p>Sunrise is a national movement to stop climate change and create millions of good jobs in the process. Sunrise Bay Area is one of the many local hubs that have sprung up nationwide to bring that movement to life! </p>
@@ -49,12 +47,8 @@
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/an5GbckznRQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-    </div>
-  </section>
 
-  <section class="content-section bg-dark py-5" id="what-we-do">
-    <div class="container text-justify">
-      <div class="row">
+    <div class="container text-justify" id="what-we-do">
         <div class="col-lg-6 mx-auto">
           <h2 class="text-center">What We Do</h2>
           <h3 class="text-center">And How You Can, Too!</h3>
@@ -67,13 +61,11 @@
           <a href="bit.ly/sunrisenewmembersurvey">Connect with our Welcoming Crew and Get Plugged In!</a>
         </div>
       </div>
-    </div>
   </section>
 
 
   <!-- Footer -->
-  <footer class="footer text-center bg-dark">
-    <div class="container">
+    <div class="container footer text-center">
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
           <a class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/bayareasunrise">
@@ -93,7 +85,6 @@
       </ul>
       <p class="text-muted small mb-0">Copyright &copy; Sunrise Movement 2019</p>
     </div>
-  </footer>
   
 </body>
 </html>
