--- a/index.html
+++ b/index.html
@@ -18,70 +18,53 @@
     
 </head>
 <body>
-
- <!-- Navigation -->
-
-
   <!-- Header -->
-  <header class="masthead d-flex">
-    <div class="container text-right bottom-right-corner">
-      <h1 class="mb-1">Welcome to the Bay Area Hub of the Sunrise Movement</h1>
-   <!--   <a class="btn btn-primary js-scroll-trigger" href="#about">Find Out More</a> -->
+  <div class="header masthead" id="header">
+    <div class="container">
+      <h1 id="title-text" class="mb-1">Welcome to the Bay Area Hub of the Sunrise Movement</h1>
     </div>
-    <div class="overlay"></div>
-  </header>
+  </div>
 
 
   <!-- Who We Are -->
-  <section class="content-section bg-dark py-5" id="who-we-are">
-    <div class="container text-justify">
-      <div class="row">
-        <div class="col-lg-6 col-md-10 mx-auto">
-          <h2 class="text-center">Who We Are</h2>
-          <p>Sunrise is a national movement to stop climate change and create millions of good jobs in the process. Sunrise Bay Area is one of the many local hubs that have sprung up nationwide to bring that movement to life! </p>
+  <div class="section" id="who-we-are">
+    <div class="container">
+      <h2>Who We Are</h2>
+      <p>Sunrise is a national movement to stop climate change and create millions of good jobs in the process. Sunrise Bay Area is one of the many local hubs that have sprung up nationwide to bring that movement to life! </p>
+      
+      <p>We're building an army of young people to make climate change an urgent priority across America, end the corrupting influence of fossil fuel executives on our politics, and elect leaders who stand up for the health and wellbeing of all people. </p>
 
-          <p>We're building an army of young people to make climate change an urgent priority across America, end the corrupting influence of fossil fuel executives on our politics, and elect leaders who stand up for the health and wellbeing of all people. </p>
-          <!-- <p class="lead mb-5">This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a> -->
+      <p><a href="https://www.sunrisemovement.org/about">Learn More About the Movement</a></p>
+      <p><a href="https://www.congress.gov/116/bills/hres109/BILLS-116hres109ih.pdf">Read the Green New Deal Resolution</a></p>
 
-        <p><a href="https://www.sunrisemovement.org/about">Learn More About the Movement</a></p>
-        <p><a href="https://www.congress.gov/116/bills/hres109/BILLS-116hres109ih.pdf">Read the Green New Deal Resolution</a></p>
-
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/an5GbckznRQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/an5GbckznRQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-  </section>
+  </div>
 
-  <section class="content-section bg-dark py-5" id="what-we-do">
-    <div class="container text-justify">
-      <div class="row">
-        <div class="col-lg-6 mx-auto">
-          <h2 class="text-center">What We Do</h2>
-          <h3 class="text-center">And How You Can, Too!</h3>
+  <div class="section" id="what-we-do">
+    <div class="container">
+      <h2>What We Do</h2>
+      <h3>And How You Can, Too!</h3>
 
+      <p>We’re making the climate crisis a decisive issue in the 2020 election by mobilizing millions, turning up the heat, and forcing the media to tell our story: our future is at stake, and we demand a real plan for addressing the climate crisis. </p>
 
-          <p>We’re making the climate crisis a decisive issue in the 2020 election by mobilizing millions, turning up the heat, and forcing the media to tell our story: our future is at stake, and we demand a real plan for addressing the climate crisis. </p>
+      <p>As a local hub, Sunrise Bay Area is one of many in-person communities making this movement real. We organize strikes, pressure local politicians, make art, host trainings, throw parties, and more!</p>
 
-          <p>As a local hub, Sunrise Bay Area is one of many in-person communities making this movement real. We organize strikes, pressure local politicians, make art, host trainings, throw parties, and more!</p>
-
-          <a href="bit.ly/sunrisenewmembersurvey">Connect with our Welcoming Crew and Get Plugged In!</a>
-        </div>
-      </div>
+      <p><a href="bit.ly/sunrisenewmembersurvey">Connect with our Welcoming Crew and Get Plugged In!</a></p>
     </div>
-  </section>
-
+  </div>
 
   <!-- Footer -->
-  <footer class="footer text-center bg-dark">
+  <div class="footer">
     <div class="container">
-      <ul class="list-inline mb-5">
+      <ul class="list-inline">
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/bayareasunrise">
+          <a class="social-link rounded-circle text-white" href="https://www.facebook.com/bayareasunrise">
             <i class="icon-social-facebook"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/sunrisebayarea">
+          <a class="social-link rounded-circle text-white" href="https://twitter.com/sunrisebayarea">
             <i class="icon-social-twitter"></i>
           </a>
         </li>
@@ -91,9 +74,9 @@
           </a>
         </li>
       </ul>
-      <p class="text-muted small mb-0">Copyright &copy; Sunrise Movement 2019</p>
+      <p class="text-muted small">Copyright &copy; Sunrise Movement 2019</p>
     </div>
-  </footer>
+  </div>
   
 </body>
 </html>
