mobile responsive for portrait

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Header -->
   <div class="header masthead" id="header">
     <div class="container">
-      <h1 id="title-text" class="mb-1">Welcome to the Bay Area Hub of the Sunrise Movement</h1>
+      <h1 id="title-text"><span>Welcome to the Bay Area Hub of the Sunrise Movement</span></h1>
     </div>
   </div>
 
@@ -34,10 +34,10 @@
       
       <p>We're building an army of young people to make climate change an urgent priority across America, end the corrupting influence of fossil fuel executives on our politics, and elect leaders who stand up for the health and wellbeing of all people. </p>
 
-      <p><a href="https://www.sunrisemovement.org/about">Learn More About the Movement</a></p>
-      <p><a href="https://www.congress.gov/116/bills/hres109/BILLS-116hres109ih.pdf">Read the Green New Deal Resolution</a></p>
+      <p class="center"><a href="https://www.sunrisemovement.org/about">Learn More About the Movement</a></p>
+      <p class="center"><a href="https://www.congress.gov/116/bills/hres109/BILLS-116hres109ih.pdf">Read the Green New Deal Resolution</a></p>
 
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/an5GbckznRQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/an5GbckznRQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     </div>
   </div>
 
@@ -50,12 +50,12 @@
 
       <p>As a local hub, Sunrise Bay Area is one of many in-person communities making this movement real. We organize strikes, pressure local politicians, make art, host trainings, throw parties, and more!</p>
 
-      <p><a href="bit.ly/sunrisenewmembersurvey">Connect with our Welcoming Crew and Get Plugged In!</a></p>
+      <p class="center"><a href="bit.ly/sunrisenewmembersurvey">Connect with our Welcoming Crew and Get Plugged In!</a></p>
     </div>
   </div>
 
   <!-- Footer -->
-  <div class="footer">
+  <div class="footer center">
     <div class="container">
       <ul class="list-inline">
         <li class="list-inline-item">
@@ -74,7 +74,7 @@
           </a>
         </li>
       </ul>
-      <p class="text-muted small">Copyright &copy; Sunrise Movement 2019</p>
+      <p class="copyright">Copyright &copy; Sunrise Movement 2019</p>
     </div>
   </div>
   
