changed link to weekly digest

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       
       <p>We're building an army of young people to make climate change an urgent priority across America, end the corrupting influence of fossil fuel executives on our politics, and elect leaders who stand up for the health and wellbeing of all people. </p>
 
-      <p class="center"><a href="https://www.sunrisemovement.org/about">Learn More About the Movement</a></p>
+      <p class="center"><a href="https://docs.google.com/document/d/1ayVhE6cH76tCCW2kfI9MnD8T58In9te1XHk4L-0q9-Q/" target="_blank">Learn More About the Movement</a></p>
       <p class="center"><a href="https://www.congress.gov/116/bills/hres109/BILLS-116hres109ih.pdf">Read the Green New Deal Resolution</a></p>
 
       <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/N28iaWIzJzg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
