--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <p>We're building an army of young people to make climate change an urgent priority across America, end the corrupting influence of fossil fuel executives on our politics, and elect leaders who stand up for the health and wellbeing of all people. </p>
 
       <p class="center"><a href="https://docs.google.com/document/d/1ayVhE6cH76tCCW2kfI9MnD8T58In9te1XHk4L-0q9-Q/" target="_blank">Learn More About the Movement</a></p>
-      <p class="center"><a href="https://www.congress.gov/116/bills/hres109/BILLS-116hres109ih.pdf">Read the Green New Deal Resolution</a></p>
+      <p class="center"><a href="https://www.congress.gov/116/bills/hres109/BILLS-116hres109ih.pdf" target="_blank">Read the Green New Deal Resolution</a></p>
 
       <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/N28iaWIzJzg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     </div>
@@ -50,7 +50,8 @@
 
       <p>As a local hub, Sunrise Bay Area is one of many in-person communities making this movement real. We organize strikes, pressure local politicians, make art, host trainings, throw parties, and more!</p>
 
-      <p class="center"><a href="bit.ly/sunrisenewmembersurvey">Connect with our Welcoming Crew and Get Plugged In!</a></p>
+      <p class="center"><a href="https://bit.ly/sunrisenewmembersurvey" target="_blank">Connect with our Welcoming Crew and Get Plugged In!</a></p>
+      <p class="center"><a href="https://docs.google.com/forms/d/e/1FAIpQLSd8uyB0Phzgwu-K8RQCKe-Umel5JZ5SRk77Jru56uTIJ3bSDg/viewform" target="_blank">Join our Upcoming Sunrise Orientation</a></p>
     </div>
   </div>
 
@@ -59,17 +60,17 @@
     <div class="container">
       <ul class="list-inline">
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white" href="https://www.facebook.com/bayareasunrise">
+          <a class="social-link rounded-circle text-white" href="https://www.facebook.com/bayareasunrise" target="_blank">
             <i class="icon-social-facebook"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white" href="https://twitter.com/sunrisebayarea">
+          <a class="social-link rounded-circle text-white" href="https://twitter.com/sunrisebayarea" target="_blank">
             <i class="icon-social-twitter"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white" href="https://www.instagram.com/bayareasunrise/">
+          <a class="social-link rounded-circle text-white" href="https://www.instagram.com/bayareasunrise/" target="_blank">
             <i class="icon-social-instagram"></i>
           </a>
         </li>
