Update copyright + open meeting link

--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
   <link rel="manifest" href="/site.webmanifest">
 
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css" />
@@ -58,6 +56,8 @@
       <p>As a local hub, Sunrise Bay Area is one of many in-person communities making this movement real. We organize strikes, pressure local politicians, make art, host trainings, throw parties, and more!</p>
 
       <p class="center"><a href="https://bit.ly/sunrisenewmembersurvey" target="_blank">Connect with our Welcoming Crew and Get Plugged In!</a></p>
+      <p class="center"><a href="https://actionnetwork.org/events/february-open-meeting" target="_blank">Come to our Open Meeting on February 9th, 2020</a></p>
+
     </div>
   </div>
 
@@ -81,7 +81,7 @@
           </a>
         </li>
       </ul>
-      <p class="copyright">Copyright &copy; Sunrise Movement 2019</p>
+      <p class="copyright">Copyright &copy; Sunrise Movement 2020</p>
     </div>
   </div>
   
