--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       <p class="center"><a href="https://docs.google.com/document/d/1ayVhE6cH76tCCW2kfI9MnD8T58In9te1XHk4L-0q9-Q/" target="_blank">Learn More About the Movement</a></p>
       <p class="center"><a href="https://www.congress.gov/116/bills/hres109/BILLS-116hres109ih.pdf" target="_blank">Read the Green New Deal Resolution</a></p>
 
-      <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/N28iaWIzJzg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+      <div class="video-container"><iframe src="https://player.vimeo.com/video/387877356" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <p><a href="https://vimeo.com/387877356">Generation Green New Deal sneak peak [Spanish subtitles]</a> from <a href="https://vimeo.com/sameilertsen">Sam Eilertsen</a> on <a href="https://vimeo.com">Vimeo</a>.</p></div>
     </div>
   </div>
 
@@ -56,7 +57,8 @@
       <p>As a local hub, Sunrise Bay Area is one of many in-person communities making this movement real. We organize strikes, pressure local politicians, make art, host trainings, throw parties, and more!</p>
 
       <p class="center"><a href="https://bit.ly/sunrisenewmembersurvey" target="_blank">Connect with our Welcoming Crew and Get Plugged In!</a></p>
-      <p class="center"><a href="https://actionnetwork.org/events/february-open-meeting" target="_blank">Come to our Open Meeting on February 9th, 2020</a></p>
+      <p class="center"><a href="https://secure.actblue.com/donate/sunrisebayarea" target="_blank">Donate to our Equity Fund</a></p>
+      <p class="center"><a href="bit.ly/feb23sunriseOT" target="_blank">Sign up for our Orientation Training on Feb. 23rd</a></p>
 
     </div>
   </div>
