--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   <!-- Header -->
   <div class="header masthead" id="header">
     <div class="container">
-      <h1 id="title-text"><span>Welcome to the Bay Area Hub of the Sunrise Movement</span></h1>
+      <h1 id="title-text">Join The Movement That Is Changing The World</h1>
+      <button class="btn btn-warning btn-sunrise-primary"><a href="https://docs.google.com/forms/d/e/1FAIpQLScQQ5mV2fJ8sIbhYNVm5XwnhAjymxllwMJ0EqIe3bkj-750ew/viewform" target="_blank">Join Hub</a></button>
     </div>
   </div>
 
