--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="header masthead" id="header">
     <div class="container">
       <h1 id="title-text">Join The Movement That Is Changing The World</h1>
-      <button class="btn btn-warning btn-sunrise-primary"><a href="https://docs.google.com/forms/d/e/1FAIpQLScQQ5mV2fJ8sIbhYNVm5XwnhAjymxllwMJ0EqIe3bkj-750ew/viewform" target="_blank">Join Hub</a></button>
+      <button class="btn btn-primary"><a href="https://docs.google.com/forms/d/e/1FAIpQLScQQ5mV2fJ8sIbhYNVm5XwnhAjymxllwMJ0EqIe3bkj-750ew/viewform" target="_blank">Join Hub</a></button>
     </div>
   </div>
 
@@ -44,6 +44,8 @@
       <p class="center"><a href="https://www.congress.gov/116/bills/hres109/BILLS-116hres109ih.pdf" target="_blank">Read the Green New Deal Resolution</a></p>
 
       <div class="video-container"><iframe src="https://player.vimeo.com/video/387877356" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <p><a href="https://vimeo.com/387877356">Generation Green New Deal sneak peak [Spanish subtitles]</a> from <a href="https://vimeo.com/sameilertsen">Sam Eilertsen</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+      </div>
     </div>
   </div>
 
