--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
   <div class="header masthead" id="header">
     <div class="container">
       <h1 id="title-text">Join The Movement That Is Changing The World</h1>
-      <button class="btn btn-primary"><a href="https://docs.google.com/forms/d/e/1FAIpQLScQQ5mV2fJ8sIbhYNVm5XwnhAjymxllwMJ0EqIe3bkj-750ew/viewform" target="_blank">Join Hub</a></button>
+      <button class="btn btn-primary">
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLScQQ5mV2fJ8sIbhYNVm5XwnhAjymxllwMJ0EqIe3bkj-750ew/viewform" target="_blank">
+          Join Bay Area Hub
+        </a>
+      </button>
     </div>
   </div>
 
