--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <p class="center"><a href="https://bit.ly/sunrisenewmembersurvey" target="_blank">Connect with our Welcoming Crew and Get Plugged In!</a></p>
       <p class="center"><a href="https://secure.actblue.com/donate/sunrisebayarea" target="_blank">Donate to our Equity Fund</a></p>
-      <p class="center"><a href="bit.ly/feb23sunriseOT" target="_blank">Sign up for our Orientation Training on Feb. 23rd</a></p>
+      <p class="center"><a href="https://bit.ly/feb23sunriseOT" target="_blank">Sign up for our Orientation Training on Feb. 23rd</a></p>
 
     </div>
   </div>
